src/objects/c2g__codaTransaction__c.object
<CustomObject>
    <customHelpPage>c2g__codahelptransaction</customHelpPage>
    <description>Holds header information about a transaction.</description>
    <fields>
        <fullName>c2g__AccountOutstandingTotal__c</fullName>
        <label>Account Outstanding Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__AccountOutstandingValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__AccountTotal__c</fullName>
        <label>Account Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__AccountValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Credits__c</fullName>
        <label>Home Credits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyRevaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation</label>
        <referenceTo>c2g__codaCurrencyRevaluation__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Debits__c</fullName>
        <label>Home Debits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentDescription__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingTotal__c</fullName>
        <label>Document Outstanding Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DocumentOutstandingValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference2__c</fullName>
        <label>Document Reference 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference__c</fullName>
        <label>Document Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTotal__c</fullName>
        <label>Document Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DocumentValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DualCredits__c</fullName>
        <label>Dual Credits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DualValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__DualValue__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DualDebits__c</fullName>
        <label>Dual Debits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DualValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__DualValue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DualValueTotal__c</fullName>
        <label>Dual Value Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DualValue__c</summarizedField>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__HomeValueTotal__c</fullName>
        <label>Home Value Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</summarizedField>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Transactions (Invoice Group)</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <label>MatchType</label>
        <picklist>
            <picklistValues>
                <fullName>Credited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Transactions (Original Transaction)</relationshipLabel>
        <relationshipName>OriginalTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayableCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Credit Note</label>
        <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReverseReason__c</fullName>
        <label>Reverse Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ReverseTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Transactions (Reverse Transaction)</relationshipLabel>
        <relationshipName>ReverseTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionType__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Matching Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency Revaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year End Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VendorDocumentNumber__c</fullName>
        <label>Vendor Document Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__TransactionType__c</columns>
        <columns>c2g__TransactionDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Credits__c</columns>
        <columns>c2g__Debits__c</columns>
        <columns>c2g__HomeValueTotal__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>c2g__AllocationTransactions</fullName>
        <columns>NAME</columns>
        <columns>c2g__TransactionType__c</columns>
        <columns>c2g__TransactionDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Credits__c</columns>
        <columns>c2g__Debits__c</columns>
        <columns>c2g__HomeValueTotal__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__TransactionType__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </filters>
        <label>Allocation Transactions</label>
    </listViews>
    <nameField>
        <displayFormat>TRN{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>